kubernetes-services/additions/echo/echo.yaml
# example echo app for testing deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: ealen/echo-server
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "10Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
namespace: default
spec:
  ports:
    - port: 80
  selector:
    app: echo
