kubernetes-services/additions/echo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "echo-ingress"
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - echo.gkcluster.org
      secretName: echo-secret
  rules:
    - host: echo.gkcluster.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: echo-service
                port:
                  number: 80
